# atproto-rs

./: Cargo.toml
crates/lexicon/: Cargo.toml
crates/lexicon-macros/: Cargo.toml
crates/lexicon-macros/src/: lib.rs
crates/lexicon/src/: lib.rs
crates/lexicon/tests/: parsing.rs
