[package]
name = "lexicon-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.26"
walkdir = "2.3.3"
atproto-lexicon = { path = "../lexicon" }
proc-macro2 = "1.0.56"
